# subagent-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: ARCHITECTURE.md
docs/examples/: checkpoint.json  handoff.md  normalized-event.ndjson  worker-continue-flow.md
skills/subagent-manager/: SKILL.md
src/subagent/: __init__.py  acp_client.py  approval_utils.py  cli.py  config.py  constants.py  controller_service.py  daemon.py  errors.py  handoff_service.py  hints.py  input_contract.py  launcher_service.py  output.py  paths.py  prompt_service.py  runtime_service.py  simple_yaml.py  state.py  turn_service.py  worker_runtime.py  worker_service.py
tests/: test_acp_backend_integration.py  test_cli_commands.py  test_cli_phase1.py  test_daemon.py  test_daemon_phase1.py  test_handoff_commands.py  test_handoff_phase4.py  test_paths.py  test_paths_phase6.py  test_polish_phase5.py  test_prompt_and_contracts.py  test_turn_commands.py  test_turn_phase3.py  test_worker_lifecycle.py  test_worker_phase2.py
tests/fixtures/: fake_acp_agent.py
