[project]
name = "subagent-cli"
version = "0.1.1"
description = "Protocol-agnostic worker orchestration CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
subagent = "subagent.cli:main"
subagentd = "subagent.daemon:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subagent"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
